# folsec_auditorV1

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: Screenshots
scripts/: New-MegaSandbox.ps1
src/: main.rs
src/errors/: mod.rs
src/remediation/: mod.rs
src/reporter/: html.rs  mod.rs
src/scanner/: acl.rs  mod.rs  risk.rs  sid.rs
src/simulator/: mod.rs
